--- a/src/docs/index.less
+++ b/src/docs/index.less
@@ -38,6 +38,21 @@ html {
 		list-style: none;
 		padding-left: 0;
 	}
+	&-examples.Button {
+
+		> li > section {
+			display: flex;
+			flex-direction: column;
+
+			> article {
+				display: flex;
+				margin: 5px 0;
+
+				button:not(:last-child) { margin-right: 5px; }
+			}
+		}
+
+	}
 
 	&-examples-header {
 		display: flex;
