--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -58,6 +58,7 @@
 @color-primary: #2abbb0;
 @color-primaryMedium: tint(@color-primary, 65%);
 @color-primaryLight: tint(@color-primary, 85%);
+@color-primary-30: fade(@color-primary, 30%);
 
 // Genaral Grays
 @color-lightGray: #f4f4f4;
@@ -76,8 +77,13 @@
 // Normalize transparent due to Safari bug
 @color-transparent: rgba(255, 255, 255, 0);
 
+// ---------------------------------------------
+//                  Box Shadows
+// ---------------------------------------------
 // Standard inset shadow
 @shadow-inset: 0 10px 10px -10px @color-gray-30 inset;
+@shadow-solid-outline: 0px 0px 0px 3px @color-primary-30;
+
 
 // Featured color variables are intended to only be used for components that
 // have "states" to them like `info`, `waring`, `danger` etc.
